logs_spare_hmuse0/training_spare_ad_roi0.log
[KeOps] Compiling cuda jit compiler engine ... 
[KeOps] Warning : There were warnings or errors compiling formula :
In file included from /home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:21:0:
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp: In function ‘int Compile(const char*, const char*, int, int, const char*)’:
<command-line>:0:20: error: ‘nvrtcGetCUBINSize’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:20: note: suggested alternative: ‘nvrtcGetPTXSize’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:90:21: note: in expansion of macro ‘nvrtcGetTARGETSize’
     NVRTC_SAFE_CALL(nvrtcGetTARGETSize(prog, &targetSize));
                     ^~~~~~~~~~~~~~~~~~
<command-line>:0:16: error: ‘nvrtcGetCUBIN’ was not declared in this scope
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~
<command-line>:0:16: note: suggested alternative: ‘nvrtcGetPTX’
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/include/utils_pe.h:6:26: note: in definition of macro ‘NVRTC_SAFE_CALL’
     nvrtcResult result = x;                                       \
                          ^
/home/cbica/anaconda3/envs/dk/lib/python3.8/site-packages/keopscore/binders/nvrtc/nvrtc_jit.cpp:93:21: note: in expansion of macro ‘nvrtcGetTARGET’
     NVRTC_SAFE_CALL(nvrtcGetTARGET(prog, target));
                     ^~~~~~~~~~~~~~

OK
Loading data from ./data/subjectsamples_longclean_dl_muse_spare_allstudies.csv
Loaded 3082 subjects
Loading train IDs from ./data/train_subject_allstudies_ids_dl_muse_spare0.pkl
Loading test IDs from ./data/test_subject_allstudies_ids_dl_muse_spare0.pkl
Train IDs: 2465
Test IDs: 617
Train data shape: (9057,)
Test data shape: (2222,)
Processed Train Data: torch.Size([9057, 149])
Processed Test Data: torch.Size([2222, 149])
Final shapes - Train Y: torch.Size([9057]) Test Y: torch.Size([2222])
depth [(149, 74)]
final layer (149, 74)
Final Layer 149 74
Training for 200 iterations...
Iteration 50/200 - Loss: 0.470
Iteration 100/200 - Loss: 0.173
Iteration 150/200 - Loss: 0.044
Iteration 200/200 - Loss: -0.024

Results for ROI 0:
MAE: 0.0926
MSE: 0.0191
RMSE: 0.1381
R²: 0.9810
Coverage: 0.9955
Interval Width: 1.1515

Model and results saved to ./models_spare
Training completed in 13.83 seconds
